--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,34 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 7.12：
+最新 7.13：
 
+王心凌 Cyndi Wang《匿名的安慰》
+
+作词:易家扬 作曲:林俊杰
+
+我 已不再掉眼泪<br>
+很努力地体会 这个世界不完美<br>
+这旅途多少胜利与败退<br>
+领悟 现实的吊诡
+
+心 在乱流中学飞<br>
+有时候很累 但我听见别气馁<br>
+是谁站在远处守护我<br>
+无声但是可贵
+
+这孤单太完美<br>
+匿名的安慰<br>
+不知道替我祝福的人他是谁<br>
+梦境别粉碎 因为和未来的约会<br>
+叫我往前追
+
+这孤单太完美<br>
+包容不完美<br>
+像一颗钻石裹着脆弱的心扉<br>
+我对自己说 伤心之后另一次机会<br>
+我会全心的奉陪/谢谢这孤单的美
+
+-------
 毛阿敏 - 历史的天空
 
 作词: 王健<br>
