--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,7 +1,14 @@
 2025年想法：
 
-最新 7.12：
+最新 7.13：
 
+家庭教师超燃BGMツナ覚醒/阿纲觉醒——我大家教还能再战五百年！ <br>
+https://www.bilibili.com/video/BV1Yo4y197cQ/
+
+-------
+现在缺的不是创作者，缺的是需要价值判断强的人花时间花精力反复斟酌在无数创作者写的茫茫多的文字中挑选出重要的文字片段。
+
+-------
 陶子柒-萧十一郎之转弯纯音乐<br>
 https://5sing.kugou.com/bz/3187659.html
 
