--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,17 @@
 
+
+生命过程等于（=）认知过程吗？ - 云卷天舒的回答 <br>
+https://www.zhihu.com/question/401011578/answer/1282686679
+
+举例来说，我们不应简单把线粒体当成细胞的“能量转化部件“，这只是一个静态的，第三人称的视角，我们不仅还要关心线粒体和细胞其他”部件“联合运作时如何行使它的功能，我们更应该关心的是线粒体作为作为外来的”原始细菌”，是如何通过共生效应进入真核细胞的演化路径的。
+一个系统的联合运作，操作员的对按钮的控制，对错误的觉察，与其他人的配合……这一些构成了一个开放性的系统，而形式逻辑只是固化了其中的“组分”。
+
+为什么科学理论只能被证伪 ？ - 云卷天舒的回答 <br>
+https://www.zhihu.com/question/397107749/answer/1257783726
+
+波普尔曾经被一个记者刁难，那个记者曾经提出：证伪理论能够被证伪吗？
+
+-------
 《长恨歌》，白居易写长篇叙事诗，天下第一人。 <br>
 https://www.bilibili.com/video/BV1uC4y1V732/
 
