--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,7 +1,10 @@
 2025年想法：
 
-最新 7.13：
+最新 7.14：
 
+歌曲随便挑的，会build成什么样我也不知道。
+
+------
 家庭教师超燃BGMツナ覚醒/阿纲觉醒——我大家教还能再战五百年！ <br>
 https://www.bilibili.com/video/BV1Yo4y197cQ/
 
