--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,7 +1,18 @@
+所有递归都可以改写成循环吗？ - MoonCancer的回答    <br>
+https://www.zhihu.com/question/20418254/answer/1919543659717727946
+
+MoonCancer：
+这个问题下面居然有那么多人说“不是所有的递归都可以改成循环”，让人不禁感叹知乎现在的水平下降到了什么地步。
+
+在马克思主义哲学中，什么是实践？ - 无知的追问的回答  <br>
+https://www.zhihu.com/question/345307580/answer/823226254
+
+无知的追问：总之我要表达的是：思维的体现方式是实践（人的真正的感性活动）！思维的体现方式是实践！思维的体现方式是实践！重要的事据说要说三遍。
+
 线粒体是怎么产生的? - 小虎纸的回答  <br>
 https://www.zhihu.com/question/329429310/answer/1232192220
 
-有些被吞进的需氧细菌不仅未被消化分解，而且逐步在大的、始祖古核生物细胞内生存下来。<img 可能是需要细菌觉得有家挺好，赖在始祖细胞中不走了，做生物也挺简单的，怎么舒服怎么嘛，费那个劲干嘛。而始祖细胞相也能接受，这当于养了一个宠物，虽然要包吃包住，但是可以从需氧菌哪里中获得糖酵解的能量和产物，这也不亏。于是，两种生物形成了相互依存的共生体，这对双方都有益。就这样，在长期演化过程中，被吞进的生物由寄生过渡到共生，最终形成了线粒体。
+小虎纸：有些被吞进的需氧细菌不仅未被消化分解，而且逐步在大的、始祖古核生物细胞内生存下来。<img 可能是需要细菌觉得有家挺好，赖在始祖细胞中不走了，做生物也挺简单的，怎么舒服怎么嘛，费那个劲干嘛。而始祖细胞相也能接受，这当于养了一个宠物，虽然要包吃包住，但是可以从需氧菌哪里中获得糖酵解的能量和产物，这也不亏。于是，两种生物形成了相互依存的共生体，这对双方都有益。就这样，在长期演化过程中，被吞进的生物由寄生过渡到共生，最终形成了线粒体。
 
 -------
 要实现人类与人工智能和谐共处的美好未来，我们能做些什么？ - 云卷天舒的回答 <br>
