--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,6 +2,61 @@
 
 最新 7.14：
 
+Delta Queens - Dance Around The World
+
+词曲： FOGLIA/MORONI
+
+Disco dance is our story<br>
+People get together to have fun<br>
+Keep it up tonight<br>
+With the disco lights<br>
+Make it better<br>
+With martini and daiquiri<br>
+
+Feel the beat of the music<br>
+Take a ride into this crazy night<br>
+Lets keep on dancing<br>
+Until the morning light<br>
+
+And the energy is on<br>
+Oh-oh-oh-oh-oh oh~~<br>
+And the power is on<br>
+Dont turn it off<br>
+Lets sing along<br>
+Oh-oh-oh-oh-oh oh~<br>
+And electricity running<br>
+Like a bomb in the air
+
+Dance around the world <br>
+Everybody <br>
+Dance around the world <br>
+Get up on the floor <br>
+All boys and girls <br>
+Shake your hands <br>
+And move your body <br>
+Dancing the night away <br>
+
+……
+
+Keep on dancing together<br>
+Moscow Tokyo NewYork Paris Rome<br>
+Lets keep on dancing<br>
+Until the morning light<br>
+
+And the energy is on<br>
+Oh-oh-oh-oh-oh oh~~<br>
+Lets sing along<br>
+Oh-oh-oh-oh-oh oh~~<br>
+
+Oh-oh-oh-oh-oh oh~~<br>
+And the power is on<br>
+Dont turn it off<br>
+Lets sing along<br>
+Oh-oh-oh-oh-oh oh~~<br>
+And electricity running<br>
+Like a bomb in the air<br>
+
+-------
 歌曲随便挑的，会build成什么样我也不知道。
 
 ------
