--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,5 @@
+阿悠悠 - 一生与你擦肩而过 <br>
+https://www.bilibili.com/video/BV1UJ411C7Jv/
 
 阿悠悠神曲《一生与你擦肩而过》遇见电台主播珠珠，催人泪下，听得辛酸泪流   <br>
 https://www.bilibili.com/video/BV1SJ411G7Wd/
