--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,9 @@
+
+普通人能从银行贷款的三种渠道 - 更始的文章 <br>
+https://zhuanlan.zhihu.com/p/694002758
+
+信贷。最基础的需要公积金，社保，打卡工资，名下按揭房，保单。第一当天或者第二天出结果，满足一种两项就能贷款，但是每家银行需要的放贷条件是一样。申请需要注意先后顺义，因为涉及查询问题，及审批，这点是需要重点注意的。信贷线上上限30，线下上限100。但信贷需要注意总授信。年限1-5年。
+
 阿悠悠 - 一生与你擦肩而过 <br>
 https://www.bilibili.com/video/BV1UJ411C7Jv/
 
