--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,13 @@
+这种的是真的银行贷款短信吗？ - 潘融故事的回答 <br>
+https://www.zhihu.com/question/5381799777/answer/51471654381
+
+如果你什么都没做，银行就给你授信贷款，你觉得现实吗？
+我身边有一个哥们，网贷都申请不下来了，这种“银行”也在天天给他授信额度。
+
+为什么银行直接贷款麻烦，通过中介在银行贷款就变得简单了，这到底是为什么？ - Xcc2627的回答 <br>
+https://www.zhihu.com/question/450449481/answer/3349499862
+
+有人为掌控的东西都有利润的，所以这种产品只要过了系统就要考虑你懂不懂事了。所以中介能办到而你办不到，就是因为你们中间缺少了一种沟通。
 
 普通人能从银行贷款的三种渠道 - 更始的文章 <br>
 https://zhuanlan.zhihu.com/p/694002758
