--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -934,7 +934,7 @@ https://www.zhihu.com/question/1905672699918901514/answer/1905824156517377253
 88年绝代双骄15集20分：女人，是你...咬你，不要你
 
 ------
-睡醒后打算去路边摊吃烧烤，路上看到一家店起的名字有点怪引起了我的注意，这也太傻了吧。先去蜜雪冰城买了杯原味奶茶，6元，没毛病，路边摊是3元。然后去吃烧烤，点的有点多，问了下多少钱，说还没算，等炸好了之后再算。好了之后告诉我39元，有一个腊肠小串，我问了下是不是比较贵，说是10元一串，里面有10小串，虽然量有点少，但好像这种小串都是卖10块，也没什么问题，然后我也没接着问了。吃的时候没记录，现在回忆一下，剩下的是4素+4荤，年糕+白菜+蘑菇+金针菇，鸡排串+大肠串+2个普通肉串，如果是3×4+4×4好像也没什么问题，如果是1×2+2×2+3×2+4×2=20好像就贵了点。之前我去一家炸串店吃，一次12，一次18含饮料，可能点的没那么多，但我觉得好便宜啊。
+睡醒后打算去路边摊吃烧烤，路上看到一家店起的名字有点怪引起了我的注意，这也太傻了吧。先去蜜雪冰城买了杯原味奶茶，6元，没毛病，路边摊是3元。然后去吃烧烤，点的有点多，问了下多少钱，说还没算，等炸好了之后再算。好了之后告诉我39元，有一个腊肠小串，我问了下是不是比较贵，说是10元一串，里面有10小串，虽然量有点少，但好像这种小串都是卖10块，也没什么问题，然后我也没接着问了。吃的时候没记录，现在回忆一下，剩下的是4素+4荤，年糕+白菜+蘑菇+金针菇，鸡排串+大肠串（很小，一串4个不到普通大肠2块）+2个普通肉串，如果是3×4+4×4好像也没什么问题，如果是1×2+2×2+3×2+4×2=20好像就贵了点。之前我去一家炸串店吃，一次12，一次18含饮料，可能点的没那么多，但我觉得好便宜啊。
 
 总结：这不是钱的问题，而是情绪的问题。去那种烤鱼店吃烧烤可能更贵一点，但这和我没关系，因为我一个人从来不去那里吃，还不如去一家炒菜店吃红烧鱼块盖浇饭，只要16元。总之这一顿45元吃的还不如12元一顿的1荤2素快餐吃的舒服，虽然那家店味道很平淡我基本不去。其实也没什么，如果点贵了问题主要在我自己，只要点的时候先拿个两三串问下多少钱，可能也就不会选择在这家吃了，或者就不会点那么多，还有可能问了后反而变便宜了。
 
