--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,8 @@
+为什么数学没有可证伪性，而物理学却有？ - LLLBK的回答 <br>
+https://www.zhihu.com/question/28301048/answer/135856593
+
+LLLBK：因为，可证伪，指的是可以被“观察经验”证伪。有很多人忽视了这一点。科学命题是依赖于观察经验的，用来证伪科学命题的必须是观察经验，而不是其他的东西。在Popper的理论中，证伪科学命题的只有观察经验，这也就是为什么数学、逻辑学不是科学。数学命题，是无关于现实经验的，因此不能被证伪。
+
 这种的是真的银行贷款短信吗？ - 潘融故事的回答 <br>
 https://www.zhihu.com/question/5381799777/answer/51471654381
 
