--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,10 @@
+
+「改善用户的生活」能用数据来衡量吗？ - 你的大姐姐的回答 <br>
+https://www.zhihu.com/question/285635743/answer/1927434786089177213
+
+你的大姐姐：增加用户使用时长是在用户增加这个时长的时候觉得被吸引和有兴趣，而不是用繁杂的无意义的程序性操作时间来【拔苗助长】【滥竽充数】【鱼目混珠】【狗尾续貂】【泥沙俱下】【本末倒置】【鬻鸡为凤】【愚民疲民】。
+
+-------
 为什么数学没有可证伪性，而物理学却有？ - LLLBK的回答 <br>
 https://www.zhihu.com/question/28301048/answer/135856593
 
