--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,7 +1,16 @@
 2025年想法：
 
-最新 7.14：
+最新 7.16：
 
+斗争是生命和物质所具有的普遍特性包括人类，但是人和动物的区别却不是斗争也不是社会性，人最特殊的地方也不是制造工具，人从所有动物中脱离出来的本质是人具有分析能力。
+
+其实无论人的制造工具能力还是分析能力都不是只有人才能拥有的，这是自然界本来就拥有的潜能，只是人最早激活了这个潜能。
+
+巧合是人脑的无意识状态，由自然环境决定，类似大模型ai通顺的语言表达是由大量训练的预料决定的。但人脑是存在有意识的分析能力的，而不但LLM的神经网络没有连动物也没有。
+
+如果说以后人类和ai共生产生新人类从旧人类中脱离出来，那么脱离出来的一定是分析能力强的而不是记忆力强的。
+
+------
 Delta Queens - Dance Around The World
 
 词曲： FOGLIA/MORONI
