--- a/text/看书.md
+++ b/text/看书.md
@@ -1,4 +1,53 @@
 
+为何毛主席更懂“人性”？对刘少奇书信的66处批语，读来汗流浃背！ - 遨游之舟的文章 <br>
+https://zhuanlan.zhihu.com/p/607390704
+
+一九四三年六月二十八日，刘少奇给晋西北行政公署主任兼晋绥军区副司令员续范亭写了一封信，其内容主要是论述“人性”问题。
+
+毛泽东读了这封信后，对其中的一些观点和提法表达了自己的意见，写下66处批语，并于当年十二月十七日给刘少奇写信说：
+
+“一气看完了你这一篇，前后看了三遍。并且率直批上了我的意见。”
+
+“我也没有研究透彻，不能说我批的全都无错，还请你看后告我。”
+
+一九六六年八月十五日，刘少奇将他给续范亭的信及毛泽东的批注一起送毛泽东。
+
+人与其他动物在本质上的区别是什么?人与其他动物最基本的区别，就在于人是有思想的。
+
+【毛批8：最基本区别是人的社会性，人是制造工具的动物，人是从事社会生产的动物，人是阶级斗争的动物（一定历史时期）。一句话，人是社会的动物，不是有无思想。一切动物都有精神现象，高等动物有感情、记忆，还有推理能力，人不过有高级精神现象，故不是最基本特征。】
+
+所以“人为万物之灵”，人是有理性的动物。
+
+【毛批13：这是唯心论的社会观，人是物质发展的一个高级形态，不是最终形态，它将来还要发展，不是什么万物之灵。人首先是社会的动物，资产阶级总是强调人的理性（精神），我们不应如此。【万物之灵是由人先激活的】】
+
+人性不是神性、鬼性。人没有神性、鬼性。思想在根本上不能离开物质而独立存在。主观在根本上不能离开客观而独立存在。
+
+【毛批19：这是两个问题，思想不能离开物质，精神现象是人脑的属性，讲的是脑子与脑子的属性的关系，一种物质运动形态与别一种物质运动形态（精神是一种特殊的物质）的关系，这是一个问题。主观反映客观，讲的是存在决定意识，社会存在决定社会意识，内心与外物的关系，这是另外一个问题，这里把它们混同了。】
+
+因为人有思想，而思想是人的主观与客观的矛盾的统一，所以人就有犯错误甚至犯系统的严重的错误之可能（只有人才可能犯错误，其他一切动物差不多都无犯错误的可能，【毛批30：不妥，竞争生存的学说，说生物由竞争而遗传而择种留良，避免淘汰，就是避免犯错误的要求【这里批的不太对】，只有矿物才无此种要求。】
+
+人的社会性与人的自然性有区别、有矛盾，但是又凝合在一起，并且在基本上是保护着（人类共同的）自然性的。二者互相限制，也互相推移。
+
+【毛批33：这个观点不妥，当作人，它只是社会的动物，人分成阶级后，只是阶级的人，再也不能多一点，无所谓人类共同的自然性，更无所谓以社会性去保护自然性，人的生命及种族存续，它就是当作社会的人的存续，再无别的。【说的太简单了】】
+
+人的自然性，是先天的，是从人这种东西的根据中产生出来的。如人的体质、聪明、本能等(这些东西受后天的影响，但在一个人的一生中不被后天所根本改变)是先天生成的。
+人的社会性，是后天的，是从各人所处的社会环境条件中养成的，如人的思想、意识、观点、习惯等，是人在生产中斗争中养成的，学会的。
+
+【毛批41：但前面又把思想意识归入自然范畴，又把聪明归于自然（先天）范畴】
+
+【毛批42：自从人脱离猴子那一天起，一切都是社会的，体质、聪明、本能一概是社会的，不能以在母腹中为先天，出生后才算后天。
+
+要说先天，那么，猴子是先天，整个人的历史都是后天。拿体质说，现在的脑、手、五官，完全是在几十万年的劳动中改造过来了，带上社会性了，人的聪明与动物的聪明，人的本能与动物的本能，也完全两样了。
+
+人的五官百体聪明能力本于遗传，人们往往把这叫作先天，以便与出生后的社会熏陶相区别，但人的一切遗传都是社会的，是在几十万年中社会生产的结果，不指明这一点，就要堕入唯心论。】 
+
+【混淆了由人组成的社会群体和单独个人，要承认大脑的物理性能是单个人聪明的一个重要组成部分，对超出100个人的群体协作来说大脑的性能对聪明的影响基本可以忽略不计】
+
+特定阶级人们的阶级性，分裂了掩盖了人们共同的社会性。【这个说法不好，应该说社会性是阶级性的基础】
+
+【毛批43：是分裂了，不是掩盖了。】
+
+-------
 马克思论费尔巴哈
 （恩格斯1888年发表的稿本）
 
