--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -6,9 +6,9 @@
 
 其实无论人的制造工具能力还是分析能力都不是只有人才能拥有的，这是自然界本来就拥有的潜能，只是人最早激活了这个潜能。
 
-巧合是人脑的无意识状态，由自然环境决定，类似大模型ai通顺的语言表达是由大量训练的预料决定的。但人脑是存在有意识的分析能力的，而不但LLM的神经网络没有连动物也没有。
+人脑无意识状态的各种巧合是由自然环境决定的，类似大模型ai通顺的语言表达是由大量训练的语料决定的。但人脑是存在有意识的分析能力的，这种分析能力不但LLM的神经网络没有连动物也没有。
 
-如果说以后人类和ai共生产生新人类从旧人类中脱离出来，那么脱离出来的一定是分析能力强的而不是记忆力强的。
+如果说以后人类和ai共生后产生新人类从旧人类中脱离出来，那么脱离出来的一定是分析能力强的人而不是记忆力强的。
 
 ------
 Delta Queens - Dance Around The World
