--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,73 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 7.15：
+最新 7.16：
 
+陈浩民/刘玉翠 - 封神
+
+作词:邓永威 作曲:巫思聪
+
+仙神人鬼从今定 不使朝朝坠草莱
+太上原始天尊敕令“五方之神,来受命耳”: 此乃"封神榜"
+
+暴君 率众妖害人<br>
+人间 积怨何容忍<br>
+全因 这世魔道行<br>
+苍天恨<br>
+齐心 甘与苦共盟<br>
+哪吒 不怕雷霆震<br>
+誓死 驱散魔道人<br>
+解厄运<br>
+血耗尽<br>
+愿能为你得永生<br>
+孝与义 惊天地<br>
+痛爱我 不计心和神<br>
+但遇着 这算是缘份<br>
+纵再见 亦难续恩情<br>
+孝义 永在心
+
+------
+陈粒-小半
+
+作词:涂玲子
+作曲:陈粒
+
+不敢回看<br>
+左顾右盼不自然的暗自喜欢<br>
+偷偷搭讪总没完地坐立难安<br>
+试探说晚安 多空泛又心酸<br>
+
+低头呢喃<br>
+对你的偏爱太过于明目张胆<br>
+在原地打转的小丑伤心不断<br>
+空空留遗憾 多难堪又为难<br>
+释然 慵懒 尽欢 时间风干后你我再无关<br>
+没答案 怎么办 看不惯我自我欺瞒<br>
+
+纵容着 喜欢的 讨厌的 宠溺的 厌倦的<br>
+一个个慢慢黯淡<br>
+纵容着 任性的 随意的 放肆的 轻易的<br>
+将所有欢脱倾翻<br>
+不应该 太心软 不大胆 太死板 不果断<br>
+玩弄着肆无忌惮<br>
+不应该 舍弃了 死心了 放手了 断念了<br>
+无可奈何不耐烦<br>
+不算<br>
+
+灯火阑珊<br>
+我的心借了你的光是明是暗<br>
+笑自己情绪太泛滥形只影单<br>
+自嘲成习惯 多敏感又难缠<br>
+
+任由着 你躲闪 我追赶 你走散 我呼喊<br>
+是谁在泛泛而谈<br>
+任由着 你来了 你笑了 你走了 不看我<br>
+与理所当然分摊<br>
+不明白 残存的 没用的 多余的 不必的<br>
+破烂也在手紧攥<br>
+不明白 谁赧然 谁无端 谁古板 谁极端<br>
+无辜不知所以然<br>
+
+-------
 谭咏麟&毛阿敏 神的传说
 
 作词: 张名河
