--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,6 +2,9 @@
 
 最新 7.16：
 
+不是我擅长分享，而是我对和人类意识相关的东西会特别敏感。
+
+------
 斗争是生命和物质所具有的普遍特性包括人类，但是人和动物的区别却不是斗争也不是社会性，人最特殊的地方也不是制造工具，人从所有动物中脱离出来的本质是人具有分析能力。
 
 其实无论人的制造工具能力还是分析能力都不是只有人才能拥有的，这是自然界本来就拥有的潜能，只是人最早激活了这个潜能。
