--- a/text/歌词.md
+++ b/text/歌词.md
@@ -25,6 +25,10 @@
 纵再见 亦难续恩情<br>
 孝义 永在心
 
+![爆炸](../pic/sub/fengshen1.JPG) <br>
+![眼波](../pic/sub/fengshen2.JPG) <br>
+![淡定](../pic/sub/fengshen3.JPG) <br>
+
 ------
 陈粒-小半
 
