--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,5 @@
+做坏事没成功还被在意的人发现了，心里很难受怎么办？ <br>
+https://www.zhihu.com/question/647824959
 
 「改善用户的生活」能用数据来衡量吗？ - 你的大姐姐的回答 <br>
 https://www.zhihu.com/question/285635743/answer/1927434786089177213
