--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,7 +1,12 @@
 2025年想法：
 
-最新 7.16：
+最新 7.17：
 
+乌龙闯情关41集15分17秒配乐：啦啦啦
+
+![扯袖子](../pic/sub/sanbu.JPG) <br>
+
+-------
 不是我擅长分享，而是我对和人类意识相关的东西会特别敏感。
 
 ------
