--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,13 @@
+
+《乌龙闯情关》片场花絮，你还记得这部童年回忆老剧吗？  <br>
+https://www.bilibili.com/video/BV11r4y1i7wr/
+
+众多明星助阵 《乌龙闯情关》要闯贺岁关<br>
+https://ent.sina.com.cn/v/2001-08-04/52597.html
+
+据邓建国透露，为了打造该剧，公司聘请了当今国内一流的编剧，光在剧本上就花费了100万元。“剧本非常出彩好看，戏剧和搞笑的色彩浓厚，剧中许多情节既出人意料，又在情理当中。
+
+------
 做坏事没成功还被在意的人发现了，心里很难受怎么办？ <br>
 https://www.zhihu.com/question/647824959
 
