--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -7,7 +7,7 @@
 海贼王404集20分51秒配乐：岩崎文纪 - 6人のビビ 
 
 -------
-海贼王漫画德岛篇完结后我就没追了，后面动画也没看。多弗朗明哥和路飞的对决是有问题的，路飞在四档状态下明哥完全打不进去破不了防，只能依靠四档的时间限制找回一点优势，从我个人的感觉上看，明哥应该再拿出几个压箱底的绝技和四档硬碰硬仍能占据优势，这样给观众的体验要更好一点。
+海贼王漫画德岛篇完结后我就没追了，后面动画也没看。多弗朗明哥和路飞的对决是有问题的，路飞在四档状态下明哥完全打不进去破不了防全程挨打，只能依靠四档的时间限制找回一点优势，从我个人的感觉上看，明哥应该再拿出几个压箱底的绝技和四档硬碰硬仍能占据优势，这样给观众的体验要更好一点。
 
 ------
 乌龙闯情关41集15分17秒配乐：啦啦啦
