--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,7 @@
+《海贼王》中，熊最后的结局会是怎样的？<br>
+https://www.bilibili.com/opus/340418313315996314
+
+第一，大熊最终获救并被恢复意识。第二，大熊被解救出来了，但还是不会恢复意识。第三，大熊可能已经自主恢复意识，但同时他也因此牺牲了。
 
 《乌龙闯情关》片场花絮，你还记得这部童年回忆老剧吗？  <br>
 https://www.bilibili.com/video/BV11r4y1i7wr/
