--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,15 +1,38 @@
 2025年想法：
 
-最新 7.17：
+最新 7.18：
 
+马旭东 - 入戏太深
+
+词曲：马旭东
+
+你的笑总是装作很天真<br>
+说我们永远都不会离分<br>
+空气中弥漫浪漫的气氛<br>
+随着心跳在升温<br>
+
+粉红色长发迷人的嘴唇<br>
+浅蓝色眼影迷离的眼神<br>
+现实的你和他路边拥吻<br>
+看街道上的落英缤纷<br>
+
+是我入戏太深 结局却一个人<br>
+原地傻傻的等 换不回那温存<br>
+怪我入戏太深 已变心的灵魂<br>
+这首歌越唱越觉得残忍/<br>
+谁能懂那些誓言多伤人
+
+------
 海贼王376集8分24秒配乐：岩崎文纪 - カラクリ防衛システム、発動！
 
-海贼王376集11分52秒 猛烈压力炮vs刀狼流
+海贼王376集11分52秒 猛烈压力炮 vs 刀狼流
 
 海贼王404集20分51秒配乐：岩崎文纪 - 6人のビビ 
 
 -------
 海贼王漫画德岛篇完结后我就没追了，后面动画也没看。多弗朗明哥和路飞的对决是有问题的，路飞在四档状态下明哥完全打不进去破不了防全程挨打，只能依靠四档的时间限制找回一点优势，从我个人的感觉上看，明哥应该再拿出几个压箱底的绝技和四档硬碰硬仍能占据优势，这样给观众的体验要更好一点。
+
+动画可能处理的好很多，不过我后来已经没心情看了，如果当时不追漫画只看动画那最后的决战要好看很多。
 
 ------
 乌龙闯情关41集15分17秒配乐：啦啦啦
