--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,10 @@
+
+[动画已复播]航海王/海贼王动画全集目录(更新至1130)(原创剧集、篇章划分、首播时间) <br>
+https://www.bilibili.com/opus/495358094580723792
+
+有点甜的酸葡萄：733 讨伐天 路飞愤怒的大猿王枪 2016-03-20
+
+--------
 《海贼王》中，熊最后的结局会是怎样的？<br>
 https://www.bilibili.com/opus/340418313315996314
 
