--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,6 +2,15 @@
 
 最新 7.18：
 
+海贼王733集3分14秒配乐：岩崎文纪 - ルフィVSクロコダイル
+
+海贼王42集2分04秒配乐：浜口史郎 - 悪いヤツ
+
+海贼王42集4分30秒配乐：追いつめられた
+
+海贼王第192集3分26秒：排击 倒下来 巨大豆蔓
+
+------
 马旭东 - 入戏太深
 
 词曲：马旭东
