--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,6 +2,11 @@
 
 最新 7.18：
 
+再次强调一下，我的分享并没有刻意表达什么意思，你们怎么理解都可以，但如果没有事实证据随意脑补那就是幻想和造谣。至于你们可能发现有很多巧合，那是真的巧合还是有什么其他原因我也不知道，硬要说我的分享有什么技术，那么我的绝大部分分享都是根据指标定理生成的，如果这也算技术的话。
+
+最后还要说一下，这些分享没有给我带来任何实质性的好处。
+
+------
 海贼王733集3分14秒配乐：岩崎文纪 - ルフィVSクロコダイル
 
 海贼王42集2分04秒配乐：浜口史郎 - 悪いヤツ
