--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,17 @@
+【王玖兴】费希特的《全部知识学基础》 <br>
+http://philosophychina.cssn.cn/zxts/wgzx/qmydsqdzxhkdzx/201507/t20150713_2726106.shtml?&back
+
+他在1806年10月8日给Hardenberg的信中说,“我的终生任务,是要给知识学作一个完整清楚的叙述,这个任务没有完成,但已接近完成。”而根据他儿子的所说,他曾打算找一个安静的地方,把他从1793年冬天所想出来的知识学写出一部最后定稿,然后他就再也不想发表任何别的著作了。但这个计划没有来得及完成,他在1814年1月28日就去世了。
+
+萧师毅：海德格尔与我们《道德经》的翻译 <br>
+https://www.douban.com/note/705334484/?_i=2839341shLS-Vg
+
+“萧先生，如果人们对于您同一段的文章却有两种截然不同的见解，您会如何回应？”海德格尔这突兀和略带刺激性的问题叫我吃了一惊。“这怎么可能呢？纳粹针对我的《存在与时间》中的某一段话，说：‘海德格尔先生，从您这书上所写的，我们很清楚地看出您不是雅利安人’。而现在，您的法国盟友却向我呈现同一段话，说：‘海德格尔先生，从您这书上所写的，可清楚看出您就是纳粹。’瞧！萧先生，同一本书的同一段文章却能产生不同的结果。您对此有何看法？”
+
+如何形容麦哲伦用三个月横渡太平洋所经历的绝望？是什么支撑他坚持下去的？ - 海漂船长凡大白的回答 <br>
+https://www.zhihu.com/question/277166162/answer/1300269633
+
+海漂船长凡大白：要知道这位主教是保守派中的顽固派，顽固派中的死硬派，反对一切创新和发现，当年给哥伦布添了不知多少堵。但不知这次是中了什么邪，极度看好麦哲伦，并向西班牙国王查理一世（自己也是查理五世/笑）推荐了他。查理一世看完了他的策划案大笔一挥，批了五艘战船，265名船员，足够两年的补给。据说还送了一头奶牛，是为了让麦哲伦在航行的时候有奶喝（/捂脸）。最终，在这位船长的带领下，1522年在放弃一艘船、被葡萄牙俘获一条船的代价下最终回到了西班牙。当然，他们最终还是找到了“香料群岛”也就是现在的摩鹿加群岛，并带回了比黄金还贵重的香料，只不过回来的只有五艘舰队中那条最小的“维多利亚号”和是18名船员。
 
 [动画已复播]航海王/海贼王动画全集目录(更新至1130)(原创剧集、篇章划分、首播时间) <br>
 https://www.bilibili.com/opus/495358094580723792
