--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,28 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 7.16：
+最新 7.18：
 
+甘萍 - 潮湿的心
+
+作词: 李广平
+作曲: 兰斋
+
+是什么淋湿了我的眼睛<br>
+看不清你远去的背影<br>
+是什么冰冷了我的心情<br>
+握不住你从前的温馨<br>
+
+是雨声喧哗了我的安宁<br>
+听不清自己哭泣的声音<br>
+是雨伞美丽了城市的风景<br>
+留不住身边匆忙的爱情<br>
+
+谁能用爱烘干我这颗潮湿的心<br>
+给我一声问候 一点温情<br>
+谁能用心感受我这份滴水的痴情<br>
+给我一片晴空 一声叮咛<br>
+
+------
 陈浩民/刘玉翠 - 封神
 
 作词:邓永威 作曲:巫思聪
