--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,37 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 7.18：
+最新 7.19：
 
+庞龙 - 兄弟抱一下
+
+词曲：蔡龙波
+
+兄弟你瘦了 看着疲惫啊 <br>
+一路风尘盖不住 岁月的脸颊 <br>
+兄弟你变了 变得沉默了 <br>
+说说吧 那些放在 心里的话 <br>
+兄弟我们的青春 就是长在那心底 <br>
+经过风吹雨打 才会开的花 <br>
+
+兄弟你说了 以后就不拼了 <br>
+只想做爱情的傻瓜 只想安稳有个家 <br>
+是啊我们都变了 变的现实了 <br>
+不再去说那些年少热血的话 <br>
+兄弟我们都像是 山坡滚落的石子 <br>
+都在颠碰之中磨掉了尖牙 <br>
+
+兄弟抱一下 说说你心里话 <br>
+说尽这些年你的委屈 和沧桑变化 <br>
+兄弟抱一下 有泪你就流吧 <br>
+流尽这些年深埋的 辛酸和苦辣 <br>
+
+兄弟抱一下 为岁月的牵挂<br>
+为那心中曾翻滚的 汹涌的浪花<br>
+为哥们并肩走过的 青春的年华<br>
+
+让深埋的话抚慰那久违的泪花
+
+------
 甘萍 - 潮湿的心
 
 作词: 李广平
