--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,7 +1,39 @@
 2025年想法：
 
-最新 7.18：
+最新 7.19：
 
+林志颖 - 我不后悔
+
+作词: 许常德
+作曲: 陈国华
+
+说好了不回头 不想承诺<br>
+缘份尽了你别过头<br>
+如果还有什么 值得我逗留<br>
+我想是你 爱过我<br>
+
+只是路无尽头<br>
+都是路过 什么感受 我能带走<br>
+眼泪可以不流<br>
+心碎不能救<br>
+看我能否得自由<br>
+
+当我松开你的手<br>
+一些风沙哽住眼眸<br>
+爱你最后一幕却模糊带过<br>
+不让疼痛有路追究<br>
+
+我不后悔我曾爱过<br>
+只是天涯从此寂寞<br>
+远去的渡口 彼岸的灯火<br>
+人在河流只许漂泊<br>
+我不后悔被你爱过<br>
+只是不能爱到最后<br>
+短暂的幸福<br>
+拥有就足够<br>
+只要舍得 就会快乐 会快乐
+
+------
 我对agi非常感兴趣，很喜欢聊agi的话题，说下我对agi的看法。agi可以极大提升人们的生产效率，但是提升开发效率并不一定就能更快做出agi，反而可能由于脑子想的太快而忽略掉了agi的本质。
 
 ------
