--- a/text/歌词.md
+++ b/text/歌词.md
@@ -2,6 +2,66 @@
 
 最新 7.19：
 
+王心凌 - 失恋歌迷党
+
+作词: 陈静楠
+作曲: 박성일
+
+你想庆祝你重回了自由<br>
+所以呼朋引伴要玩个够<br>
+为我们共守好久的友情<br>
+加油<br>
+
+他说想移民最远的星球<br>
+没有爱情也能度假享受<br>
+吃大餐不必在乎为谁瘦<br>
+现在就走<br>
+让我们忠于自己的感受<br>
+能不能有泪就流有歌就吼<br>
+填满心底心底的缺口<br>
+拿起麦克风加入失恋歌迷党<br>
+今夜不清场<br>
+你和我变身天后天王<br>
+插播那首谁先唱<br>
+喝掉胖大海加入失恋歌迷党<br>
+用快乐开嗓<br>
+歌声把伤心统统死当<br>
+快歌慢歌你最棒<br>
+为你鼓鼓掌<br>
+
+1234举着手今晚要唱个够
+谁要先走是小狗嘿<br>
+该他了 let's go!<br>
+
+1234换个姿势<br>
+超快歌再来一首<br>
+我们伴舞伴奏<br>
+你的go来喽<br>
+
+------
+谢霆锋 - 只要为你活一天 
+
+词曲：洪典
+
+爱上了你 爱上了你<br>
+注定的是你 我输得彻底<br>
+爱上了你 爱上了你<br>
+早预言了分离 决定了悲剧<br>
+
+上天给了我多少时间<br>
+全都给你 我忘了我自己<br>
+赶在生命里有限的时间里<br>
+就让这一刻停在这里<br>
+
+只要为你再活一天 我愿意<br>
+不管明天就算有更坏的消息<br>
+只要为你再活一天 我的心<br>
+我的心 就会满意<br>
+
+da la dang(da la dang) dang..dang..dang da la.. dang..dang..<br>
+da la dang(da la dang) dang..dang..dang da la.. dong..ang..
+
+--------
 庞龙 - 兄弟抱一下
 
 词曲：蔡龙波
