--- a/text/看书.md
+++ b/text/看书.md
@@ -1,7 +1,7 @@
 
-晴雯在旁哭着，方欲说话，只见林黛玉进来，便出去了。林黛玉笑道：“大节下怎么了？好好的哭起来。难道是为争粽子吃争恼了不成？”宝玉和袭人嗤的一笑。林黛玉道：“二哥哥不告诉我，我问你就知道了。”一面说，一面靠着袭人的肩膀道：“好嫂子，你告诉我。必定是你两个拌了嘴了。告诉妹妹，替你们和劝和劝。”袭人推他道：“林姑娘你闹什么？我们一个丫头家，姑娘只是混说。”黛玉笑道：“你说你是个丫头，我只拿你当嫂子待。”宝玉道：“你何苦来！替他招骂名儿。饶这么着，还有人说闲话，还搁的住你来说他。”袭人笑道：“林姑娘，你不知道我的心事，除非这一口气不来死了倒也罢了。”林黛玉笑道：“你死了，别人不知怎么样，我先就哭死了。”宝玉笑道：“你死了，我作和尚去。”袭人笑道：“你老实些罢，何苦来还说这些话。”林黛玉将两个指头一伸，抿嘴笑道：“作了两个和尚了。我从今以后都记着你作和尚的遭数儿。”宝玉听了，知道是他点前儿的话，自己一笑也就罢了。
+晴雯在旁哭着，方欲说话，只见林黛玉进来，便出去了。林黛玉笑道：“大节下怎么了？好好的哭起来。难道是为争粽子吃争恼了不成？”宝玉和袭人嗤的一笑。林黛玉道：“二哥哥不告诉我，我问你就知道了。”一面说，一面靠着袭人的肩膀道：“好嫂子，你告诉我。必定是你们两个拌了嘴了。告诉妹妹，替你们和劝和劝。”袭人推他道：“林姑娘你闹什么？我们一个丫头家，姑娘只是混说。”黛玉笑道：“你说你是个丫头，我只拿你当嫂子待。”宝玉道：“你何苦来！替他招骂名儿。饶这么着，还有人说闲话，还搁的住你来说他。”袭人笑道：“林姑娘，你不知道我的心事，除非这一口气不来死了倒也罢了。”林黛玉笑道：“你死了，别人不知怎么样，我先就哭死了。”宝玉笑道：“你死了，我作和尚去。”袭人笑道：“你老实些罢，何苦来还说这些话。”林黛玉将两个指头一伸，抿嘴笑道：“作了两个和尚了。我从今以后都记着你作和尚的遭数儿。”宝玉听了，知道是他点前儿的话，自己一笑也就罢了。
 
-一时黛玉去后，就有人来回：“薛大爷请”，宝玉只得去了。原来是吃酒，不能推辞，只得尽席而散。晚间回来，已带了几分酒，踉跄来至自己院内，只见院中早把乘凉枕榻设下，榻上有个人睡着。宝玉只当是袭人，一面在榻沿上坐下，一面推他，问道：“疼的好些了？”只见那人番身起来，说道：“何苦来，又招我！”宝玉一看，原来不是袭人，却是晴雯。宝玉将他一拉，拉在身旁坐下，笑道：“你的性子越发惯娇了。早起就是跌了扇子，我不过说了那两句，你就说上那些话。你说我也罢了，袭人好意来劝，你又括上他，你自己想想，该不该？”晴雯道：“怪热的，拉拉扯扯作什么！叫人来看见象什么！我这身子也不配坐在这里。”宝玉笑道：“你既知道不配，为什么淌在这里？”晴雯没的说，嗤的又笑了，说：“你不来便使得，你来了就不配了。起来，让我洗澡去。袭人麝月都洗了澡，我叫了他们来。”宝玉笑道：“我才又吃了好些酒，还得洗一洗。你既没有洗，拿了水来咱们两个洗。”晴雯摇手笑道：“罢，罢，我不敢惹爷。记得碧浪打发你洗澡，足闹了两三个时辰，也不知道作什么呢。我们也不好进去的。后来洗完了，进去瞧瞧，地下的水淹着床腿，连席子上都汪着水，也不知是怎么洗了，叫人笑了几天。我也没那工夫收拾，也不用同我洗去。今儿也凉快，那会子洗了，这会子可以不用。我倒舀盆水来，你洗洗脸通通头。才刚鸳鸯送了好些果子来，都湃在那水晶缸里呢，叫他们打发你吃。”宝玉笑道：“既这么着，你也不许洗去，只洗洗手来拿果子来吃罢。”晴雯笑道：“我慌张的狠，连扇子还跌折了，那里还配打发吃果子。倘或再打了盘子，还更了不得呢。”宝玉笑道：“你爱打就打，这些东西原不过是供人所用，你爱那样，我爱这样，各自性情不同。比如那扇子原是扇的，你要撕着玩也可以使得，只是不可生气时拿他出气。就如杯盘，原是盛东西的，你喜听那一声响，就故意的摔碎了，也可以使得，只是别在生气时拿他出气。这就是爱物了。”晴雯听了，笑道：“既这样说，你就拿扇子来我撕。我最喜欢撕的。”宝玉听了，便笑着递与他。晴雯接过来，嗤的一声，撕了两半，接着又听嗤嗤几声。宝玉在旁笑着说：“响的好，再撕响些！”正说着，只见麝月过来叹道：“少作些孽罢。”宝玉赶上来，一把将他手中的扇子也夺了，递与晴雯。晴雯接了，也撕了几半子，二人都大笑。麝月道：“这是怎么说，拿我的东西开心儿？”宝玉笑道：“打开扇子匣子你拣去，什么好东西！”麝月道：“既这么说，就把匣子搬了出来，让他尽力的撕，岂不好？”宝玉笑道：“你就搬去。”麝月道：“我可不造这孽。他也没折了手，叫他自己搬去。”晴雯笑着，倚在床上说道：“我也乏了，明儿再撕罢。”宝玉笑道：“古人云：‘千金难买一笑。’几把扇子能值几何！”一面说着，一面叫袭人。袭人才换了衣服出来，小丫头佳蕙过来拾去破扇，大家乘凉，不消细说。
+一时黛玉去后，就有人来回：“薛大爷请”，宝玉只得去了。原来是吃酒，不能推辞，只得尽席而散。晚间回来，已带了几分酒，踉跄来至自己院内，只见院中早把乘凉枕榻设下，榻上有个人睡着。宝玉只当是袭人，一面在榻沿上坐下，一面推他，问道：“疼的好些了？”只见那人番身起来，说道：“何苦来，又招我！”宝玉一看，原来不是袭人，却是晴雯。宝玉将他一拉，拉在身旁坐下，笑道：“你的性子越发惯娇了。早起就是跌了扇子，我不过说了那两句，你就说上那些话。你说我也罢了，袭人好意来劝，你又括上他，你自己想想，该不该？”晴雯道：“怪热的，拉拉扯扯作什么！叫人来看见象什么！我这身子也不配坐在这里。”宝玉笑道：“你既知道不配，为什么淌在这里？”晴雯没的说，嗤的又笑了，说道：“你不来便使得，你来了就不配了。起来，让我洗澡去。袭人麝月都洗了澡，我叫了他们来。”宝玉笑道：“我才又吃了好些酒，还得洗一洗。你既没有洗，拿了水来咱们两个洗。”晴雯摇手笑道：“罢，罢，我不敢惹爷。记得碧浪打发你洗澡，足闹了两三个时辰，也不知道作什么呢。我们也不好进去的。后来洗完了，进去瞧瞧，地下的水淹着床腿，连席子上都汪着水，也不知是怎么洗了，叫人笑了几天。我也没那工夫收拾，也不用同我洗去。今儿也凉快，那会子洗了，这会子可以不用。我倒舀盆水来，你洗洗脸通通头。才刚鸳鸯送了好些果子来，都湃在那水晶缸里呢，叫他们打发你吃。”宝玉笑道：“既这么着，你也不许洗去，只洗洗手来拿果子来吃罢。”晴雯笑道：“我慌张的狠，连扇子还跌折了，那里还配打发吃果子。倘或再打了盘子，还更了不得呢。”宝玉笑道：“你爱打就打，这些东西原不过是供人所用，你爱那样，我爱这样，各自性情不同。比如那扇子原是扇的，你要撕着玩也可以使得，只是不可生气时拿他出气。就如杯盘，原是盛东西的，你喜听那一声响，就故意的摔碎了，也可以使得，只是别在生气时拿他出气。这就是爱物了。”晴雯听了，笑道：“既这样说，你就拿扇子来我撕。我最喜欢撕的。”宝玉听了，便笑着递与他。晴雯接过来，嗤的一声，撕了两半，接着又听嗤嗤几声。宝玉在旁笑着说：“响的好，再撕响些！”正说着，只见麝月过来叹道：“少作些孽罢。”宝玉赶上来，一把将他手中的扇子也夺了，递与晴雯。晴雯接了，也撕了几半子，二人都大笑。麝月道：“这是怎么说，拿我的东西开心儿？”宝玉笑道：“打开扇子匣子你拣去，什么好东西！”麝月道：“既这么说，就把匣子搬了出来，让他尽力的撕，岂不好？”宝玉笑道：“你就搬去。”麝月道：“我可不造这孽。他也没折了手，叫他自己搬去。”晴雯笑着，倚在床上说道：“我也乏了，明儿再撕罢。”宝玉笑道：“古人云：‘千金难买一笑。’几把扇子能值几何！”一面说着，一面叫袭人。袭人才换了衣服出来，小丫头佳蕙过来拾去破扇，大家乘凉，不消细说。
 
 ------
 为何毛主席更懂“人性”？对刘少奇书信的66处批语，读来汗流浃背！ - 遨游之舟的文章 <br>
