--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,12 @@
+
+人工智能是不是走错了方向？ - LiFF的回答 <br>
+https://www.zhihu.com/question/445383290/answer/2437057995
+
+LiFF：
+一个相信理想主义的笨蛋
+回到正题，首先，不但深度学习错了，而且更惨的是就算现在有一个正确的人工智能理论放在这儿，我认为也几乎没人有能力真正读懂。
+
+--------
 【王玖兴】费希特的《全部知识学基础》 <br>
 http://philosophychina.cssn.cn/zxts/wgzx/qmydsqdzxhkdzx/201507/t20150713_2726106.shtml?&back
 
