--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,12 @@
 
+如何看OpenAI研究人员宣布他们的内部实验模型获得了国际数学奥赛2025的金牌？ - 乔卡伊桑OvO的回答 <br>
+https://www.zhihu.com/question/1929974654866527480/answer/1930102898844481402
+
+乔卡伊桑OvO：可信度很低，真有这种神迹openai最近人员流失会这么多？
+
+https://github.com/aw31/openai-imo-2025-proofs/tree/main
+
+-------
 人工智能是不是走错了方向？ - LiFF的回答 <br>
 https://www.zhihu.com/question/445383290/answer/2437057995
 
