--- a/text/看书.md
+++ b/text/看书.md
@@ -5,9 +5,13 @@
 
 针对上面括号的说明，我们说直线的形式是y+kx=b，平行指的是左边的形式k是固定的，b可以选其他值，x+y=0这条直线决定了左边是x+y的形式，如果取x+2y的形式，那么就不与x+y=0平行。x=3，y=7和x+y=0平行确定了x+y=10，然后再选取一点x=5，y待定，如果y取5，那么此时（3，7）和（5，5）这两个点就确定了一条与x+y=0平行的直线，所以想要（3，7）和（5，y）不与x+y=0平行，那么y就不能取5。
 
-上面说平行就是y+kx形式中的k是固定的，但这么说总显得太单薄了点，从直观上来看平行应该指的是两条直线上点的距离处处相等。那不平行为什么就做不到处处相等呢？从形式上就可以保证处处相等的，比如两条平行直线y=kx+b1，y=kx+b2，当x取相同的值时，y的差值总是b1-b2。如果k不相等，那么差值就是(k1-k2)x+b1-b2，这个差值会随着x的改变而改变。这样的说明还只是举了一个特例，理由不够充分，前面说的就是用一条平行y轴的直线去割两条平行线，得到的距离处处相等，完整的应该是任意平行的一组直线去割两条平行线，得到的线段都是处处相等的。但这应该是平行的基本定义吧，怎么变得好像是一个需要证明的复杂定理一样。
+上面说平行就是y+kx形式中的k是固定的，但这么说总显得太单薄了点，从直观上来看平行应该指的是两条直线上点的距离处处相等。那不平行为什么就做不到处处相等呢？从形式上就可以保证处处相等的，比如两条平行直线y=kx+b1，y=kx+b2，当x取相同的值时，y的差值总是b1-b2。如果k不相等，那么差值就是(k1-k2)x+b1-b2，这个差值会随着x的改变而改变。这样的说明还只是举了一个特例，理由不够充分，前面说的就是用一条平行y轴的直线去割两条平行线，得到的距离处处相等，完整的应该是任意平行的一组直线去割两条平行线，得到的线段都是处处相等的。但这应该是平行的基本定义吧，怎么变得好像是一个需要证明的复杂定理一样。上面说的好像是平行四边形，应该可以从同位角、全等之类的一步一步构造出来证明。另外还有一点是我在考虑的，坐标几何和纯几何的对应关系在数学专业中有严格的证明吗？就是如何证明不可能出现反例导致两种方法对同一个命题的结论判定是不一致的。
 
 给定n，>=3（如果n取2会产生什么不良后果吗？）,求k，使得存在，n条，满足两个条件，a和b满足a+b<=n+1，的点。第一个条件，当给定了一个n后，在<=n内无论a和b怎么取，都能构造出n条直线使得有一条经过点(a,b)，只有这个条件应该是随便构造吧，比如先取一条直线经过点(a,b)，剩下的n-1条随便选。第二个条件，这n条直线中恰有k条是阳光的，题目是求k，那上面构造好后我数一下有几条不就得到了k？现在我的头脑还是比较混乱的，我还没搞明白题目到底想让我做什么。
+
+你不是有了操作后得到k的方法吗，那就代入n，a，b等的具体数值，算出k的值，注意不止一个，不要漏掉了。有漏掉好判定，给出答案没有的k值，验证满足条件就可以了，但正确答案给出k的所有取值，怎么才能自证没有漏掉呢？
+
+感觉对题意的理解还是一知半解的，先找找题目中一些隐含的条件，a和b是正整数，所以满足a+b<=n+1的ab取值是有限的，如果不限制整数会怎么样？
 
 ------
 晴雯在旁哭着，方欲说话，只见林黛玉进来，便出去了。林黛玉笑道：“大节下怎么了？好好的哭起来。难道是为争粽子吃争恼了不成？”宝玉和袭人嗤的一笑。林黛玉道：“二哥哥不告诉我，我问你就知道了。”一面说，一面靠着袭人的肩膀道：“好嫂子，你告诉我。必定是你们两个拌了嘴了。告诉妹妹，替你们和劝和劝。”袭人推他道：“林姑娘你闹什么？我们一个丫头家，姑娘只是混说。”黛玉笑道：“你说你是个丫头，我只拿你当嫂子待。”宝玉道：“你何苦来！替他招骂名儿。饶这么着，还有人说闲话，还搁的住你来说他。”袭人笑道：“林姑娘，你不知道我的心事，除非这一口气不来死了倒也罢了。”林黛玉笑道：“你死了，别人不知怎么样，我先就哭死了。”宝玉笑道：“你死了，我作和尚去。”袭人笑道：“你老实些罢，何苦来还说这些话。”林黛玉将两个指头一伸，抿嘴笑道：“作了两个和尚了。我从今以后都记着你作和尚的遭数儿。”宝玉听了，知道是他点前儿的话，自己一笑也就罢了。
