--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,23 @@
+嘉庆时发生的“癸酉之变”是什么回事，天理教为何能打进皇宫？ <br>
+https://www.163.com/dy/article/DS8BA1D60525NMF8.htm
+
+此碑文是嘉庆十八年(1813年)春天，嘉庆帝前去谒祭西陵的路上登临云居寺的题诗。他把镇压农民起义军的残酷手段诠释成所标榜的“心仁”。
+
+嘉庆皇帝的改革——西方势力入侵前的体制内变革 - 阿史那的文章 <br>
+https://zhuanlan.zhihu.com/p/557453038
+
+阿史那：历史的经验教训告诉嘉庆皇帝，改革不是那么容易的事。它要打破旧格局旧秩序，重新调配社会资源，难免会动既得利益者的奶酪，必然会遭到整个既得利益阶层的反噬，引发社会摩擦、动荡，甚至酿成政变、激发战乱。
+
+AI奥数神话一夜崩塌！2025 IMO顶流大模型集体挂，AI数学推理被高估？ - AI很有意思的回答  <br>
+https://www.zhihu.com/question/1929561619819636000/answer/1929646793534203383
+
+AI很有意思：媒体
+通常，在人类选手参加IMO比赛时，他们要么一题全部做对，要么干脆拿0分，拿3分、4分这样的中等分数，其实是很少见的。 不过大模型可就完全不一样了，它们特别擅长考个「及格边缘线」。也就是说，它们时常能捕捉到正确的解题思路，方向是对的，但是一到最关键的地方就会掉链子，逻辑跳跃严重。 尤其是到了该证明的关键一步，它们就不证明了。…阅读全文​
+
+陶哲轩锐评大模型参赛 IMO：AI 竞赛亟需划定「公平赛道」 - 段小草的文章 <br>
+https://zhuanlan.zhihu.com/p/1930219198312850486
+
+段小草：在缺乏统一、受控的测试标准下，讨论 AI 的「金牌」成绩，可能毫无意义。他同时明确表示，自己 不会对任何没有在赛前披露评测方法的 AI 竞赛成绩发表评论。陶哲...阅读全文​
 
 如何看OpenAI研究人员宣布他们的内部实验模型获得了国际数学奥赛2025的金牌？ - 乔卡伊桑OvO的回答 <br>
 https://www.zhihu.com/question/1929974654866527480/answer/1930102898844481402
