--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,7 +1,10 @@
 2025年想法：
 
-最新 7.19：
+最新 7.20：
 
+对于大模型ai有一点是需要值得注意的，让ai写代码可能经常会出错，但是给定一段完整的输入输出的C++代码，用ai将其转换成C语言却基本不会出错，这件事不是平凡的，因为想要写一个C++转C语言的代码转换器并不容易。
+
+-----
 林志颖 - 我不后悔
 
 作词: 许常德
