--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,10 @@
+6 大模型决战高考数学新一卷，豆包和元宝并列第一，OpenAI o3 垫底，如何解读它们的表现？ - theigrams的回答  <br>
+https://www.zhihu.com/question/1915087130696320803/answer/1915219775535191786
+
+theigrams：观察员
+经过个人测试，尽可能将题目转成 LaTeX 公式，再进行适当修改避免歧义。
+o3，o4-mini-high，Gemini 2.5Pro 0605 都能拿满分 150。
+
 嘉庆时发生的“癸酉之变”是什么回事，天理教为何能打进皇宫？ <br>
 https://www.163.com/dy/article/DS8BA1D60525NMF8.htm
 
@@ -25,6 +32,8 @@ https://www.zhihu.com/question/1929974654866527480/answer/1930102898844481402
 乔卡伊桑OvO：可信度很低，真有这种神迹openai最近人员流失会这么多？
 
 https://github.com/aw31/openai-imo-2025-proofs/tree/main
+
+我个人认为可信度还是挺高的，只是不排除造假的可能性。还有一点可能性比较大，就是不知道什么原因内部测试到开放测试还有很大的距离。
 
 -------
 人工智能是不是走错了方向？ - LiFF的回答 <br>
