--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -33,7 +33,7 @@ https://www.zhihu.com/question/1929974654866527480/answer/1930102898844481402
 
 https://github.com/aw31/openai-imo-2025-proofs/tree/main
 
-我个人认为可信度还是挺高的，只是不排除造假的可能性。还有一点可能性比较大，就是不知道什么原因内部测试到开放测试还有很大的距离。
+我个人认为可信度还是挺高的，只是不排除造假的可能性。之所以不开放测试可能稳定性不太好，比如这次imo的测试运气好分数很高，拿其他题目测可能就不太好。
 
 -------
 人工智能是不是走错了方向？ - LiFF的回答 <br>
