--- a/text/看书.md
+++ b/text/看书.md
@@ -9,9 +9,13 @@
 
 给定n，>=3（如果n取2会产生什么不良后果吗？）,求k，使得存在，n条，满足两个条件，a和b满足a+b<=n+1，的点。第一个条件，当给定了一个n后，在<=n内无论a和b怎么取，都能构造出n条直线使得有一条经过点(a,b)，只有这个条件应该是随便构造吧，比如先取一条直线经过点(a,b)，剩下的n-1条随便选。第二个条件，这n条直线中恰有k条是阳光的，题目是求k，那上面构造好后我数一下有几条不就得到了k？现在我的头脑还是比较混乱的，我还没搞明白题目到底想让我做什么。
 
-你不是有了操作后得到k的方法吗，那就代入n，a，b等的具体数值，算出k的值，注意不止一个，不要漏掉了。有漏掉好判定，给出答案没有的k值，验证满足条件就可以了，但正确答案给出k的所有取值，怎么才能自证没有漏掉呢？初步想到一种思路，就是给定n，遍历所有可能的a和b，一一验证，因为n，a，b都是正整数，所以是可以验证的。
+你不是有了操作后得到k的方法吗，那就代入n，a，b等的具体数值，算出k的值，注意不止一个，不要漏掉了。有漏掉好判定，给出答案没有的k值，验证满足条件就可以了，但正确答案给出k的所有取值，怎么才能自证没有漏掉呢？初步想到一种思路，就是给定n，遍历所有可能的a和b，一一验证，因为n，a，b都是正整数，所以是可以验证的。这段话说的很乱。
 
-感觉对题意的理解还是一知半解的，先找找题目中一些隐含的条件，a和b是正整数，所以满足a+b<=n+1的ab取值是有限的，如果不限制整数会怎么样？我现在有点明白题目的意思了，好像要求的k是一个关于n的表达式，n不取1、2可能是这时算出来的k值不能用n>=3算出来的表达式来表示。既然k是关于n的一个表达式，那么题目中又说求所有非负整数k，这样的说法就有点怪怪的，这句话的意思难道是k的表达式还不止一种？你的理解问题很大，n不是构造本身，n只是限定了构造直线的条数，满足n条直线的构造方式有无数种，在这无数种方式中再找出对应的k，只要有一种方式数出来是k，那么这个k就是满足给定n的解。
+感觉对题意的理解还是一知半解的，先找找题目中一些隐含的条件，a和b是正整数，所以满足a+b<=n+1的ab取值是有限的，如果不限制整数会怎么样？我现在有点明白题目的意思了，好像要求的k是一个关于n的表达式，n不取1、2可能是这时算出来的k值不能用n>=3算出来的表达式来表示。既然k是关于n的一个表达式，那么题目中又说求所有非负整数k，这样的说法就有点怪怪的，这句话的意思难道是k的表达式还不止一种？你的理解问题很大，n不是构造本身，n只是限定了构造直线的条数，满足条件1的n条直线的构造方式有无数种，在这无数种方式中再找出对应的k，只要有一种方式数出来是k，那么这个k就是满足给定n的解。
+
+我感觉我对题目还是没有理解清楚，是题目太绕了，还是我的理解能力太差了？很多题目我都需要看答案才能明白出题人想表达什么意思，这次想先不看答案弄明白题目的意思，以后有空再把我上面写的思维混乱的文字逐字逐句地斟酌一番，把所有混淆的概念都区分出来。
+
+因为你们的脑容量是我的很多倍，所以批判我或者夸赞我都没什么意思，我这里只是想展示智商不高的人想体验做数学题的思维过程，又不想花时间学数学，那就只能借助ai玩玩高中数学竞赛题了，毕竟以后就算ai做imo满分了，也要从作用和体验两方面体现出来。
 
 ------
 晴雯在旁哭着，方欲说话，只见林黛玉进来，便出去了。林黛玉笑道：“大节下怎么了？好好的哭起来。难道是为争粽子吃争恼了不成？”宝玉和袭人嗤的一笑。林黛玉道：“二哥哥不告诉我，我问你就知道了。”一面说，一面靠着袭人的肩膀道：“好嫂子，你告诉我。必定是你们两个拌了嘴了。告诉妹妹，替你们和劝和劝。”袭人推他道：“林姑娘你闹什么？我们一个丫头家，姑娘只是混说。”黛玉笑道：“你说你是个丫头，我只拿你当嫂子待。”宝玉道：“你何苦来！替他招骂名儿。饶这么着，还有人说闲话，还搁的住你来说他。”袭人笑道：“林姑娘，你不知道我的心事，除非这一口气不来死了倒也罢了。”林黛玉笑道：“你死了，别人不知怎么样，我先就哭死了。”宝玉笑道：“你死了，我作和尚去。”袭人笑道：“你老实些罢，何苦来还说这些话。”林黛玉将两个指头一伸，抿嘴笑道：“作了两个和尚了。我从今以后都记着你作和尚的遭数儿。”宝玉听了，知道是他点前儿的话，自己一笑也就罢了。
