--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,7 +2,13 @@
 
 最新 7.20：
 
-对于大模型ai有一点是需要值得注意的，让ai写代码可能经常会出错，但是给定一段完整的输入输出的C++代码，用ai将其转换成C语言却基本不会出错，这件事不是平凡的，因为想要写一个C++转C语言的代码转换器并不容易。
+实践后是要做分析工作的，总能分析出很多新的思想来。新思想是要实践的，一方面检验是否符合客观实际，另一方面获取更多的分析材料。
+
+------
+自发性繁荣是没有传承的，繁荣过后会迅速进入低谷很难再次繁荣。想要传承就必须牺牲掉一些繁荣，有意识地做一些传承相关工作。但注意不是机械性传承，一旦固化会失去活力阻碍进步，所以传承的同时还需要不断创新，这样才可能做到波浪式稳定上升。
+
+------
+对于大模型ai有一点是需要值得注意的，让ai写代码可能经常会出错，但是给定一段完整的输入输出的C++代码，用ai将其转换成C语言却基本不会出错，这件事不是平凡的，因为人类想要写一个C++转C语言的代码转换器并不容易。
 
 -----
 林志颖 - 我不后悔
