--- a/text/看书.md
+++ b/text/看书.md
@@ -13,7 +13,7 @@
 
 感觉对题意的理解还是一知半解的，先找找题目中一些隐含的条件，a和b是正整数，所以满足a+b<=n+1的ab取值是有限的，如果不限制整数会怎么样？我现在有点明白题目的意思了，好像要求的k是一个关于n的表达式，n不取1、2可能是这时算出来的k值不能用n>=3算出来的表达式来表示。既然k是关于n的一个表达式，那么题目中又说求所有非负整数k，这样的说法就有点怪怪的，这句话的意思难道是k的表达式还不止一种？你的理解问题很大，n不是构造本身，n只是限定了构造直线的条数，满足条件1的n条直线的构造方式有无数种，在这无数种方式中再找出对应的k，只要有一种方式数出来是k，那么这个k就是满足给定n的解。
 
-我感觉我对题目还是没有理解清楚，是题目太绕了，还是我的理解能力太差了？很多题目我都需要看答案才能明白出题人想表达什么意思，这次想先不看答案弄明白题目的意思，以后有空再把我上面写的思维混乱的文字逐字逐句地斟酌一番，把所有混淆的概念都区分出来。看数学书的老问题又来了，为什么一定要和出题人的理解相同呢？就不能按自己的认知来理解？
+我感觉我对题目还是没有理解清楚，是题目太绕了，还是我的理解能力太差了？很多题目我都需要看答案才能明白出题人想表达什么意思，这次想先不看答案弄明白题目的意思，以后有空再把我上面写的思维混乱的文字逐字逐句地斟酌一番，把所有混淆的概念都区分出来。看数学书的老问题又来了，为什么一定要和出题人的理解相同呢？就不能按自己的认知来理解？毕竟我现在看数学又不是为了考试，也不需要数学圈的认同，和ai圈也没什么关系，哲学圈的人也不看数学。
 
 因为你们的脑容量是我的很多倍，所以批判我或者夸赞我都没什么意思，我这里只是想展示智商不高的人想体验做数学题的思维过程，又不想花时间学数学，那就只能借助ai玩玩高中数学竞赛题了，毕竟以后就算ai做imo满分了，也要从作用和体验两方面体现出来。
 
