--- a/text/看书.md
+++ b/text/看书.md
@@ -7,7 +7,7 @@
 
 上面说平行就是y+kx形式中的k是固定的，但这么说总显得太单薄了点，从直观上来看平行应该指的是两条直线上点的距离处处相等。那不平行为什么就做不到处处相等呢？从形式上就可以保证处处相等的，比如两条平行直线y=kx+b1，y=kx+b2，当x取相同的值时，y的差值总是b1-b2。如果k不相等，那么差值就是(k1-k2)x+b1-b2，这个差值会随着x的改变而改变。这样的说明还只是举了一个特例，理由不够充分，前面说的就是用一条平行y轴的直线去割两条平行线，得到的距离处处相等，完整的应该是任意平行的一组直线去割两条平行线，得到的线段都是处处相等的。但这应该是平行的基本定义吧，怎么变得好像是一个需要证明的复杂定理一样。上面说的好像是平行四边形，应该可以从同位角、全等之类的一步一步构造出来证明。另外还有一点是我在考虑的，坐标几何和纯几何的对应关系在数学专业中有严格的证明吗？就是如何证明不可能出现反例导致两种方法对同一个命题的结论判定是不一致的。
 
-给定n，>=3（如果n取2会产生什么不良后果吗？）,求k，使得存在，n条，满足两个条件，a和b满足a+b<=n+1，的点。第一个条件，当给定了一个n后，在<=n内无论a和b怎么取，都能构造出n条直线使得有一条经过点(a,b)，只有这个条件应该是随便构造吧，比如先取一条直线经过点(a,b)，剩下的n-1条随便选。第二个条件，这n条直线中恰有k条是阳光的，题目是求k，那上面构造好后我数一下有几条不就得到了k？现在我的头脑还是比较混乱的，我还没搞明白题目到底想让我做什么。
+给定n，>=3（如果n取2会产生什么不良后果吗？）,求k，使得存在，n条，满足两个条件，a和b满足a+b<=n+1，的点。第一个条件，当给定了一个n后，在<=n内无论a和b怎么取，都能构造出n条直线使得有一条经过点(a,b)，只有这个条件应该是随便构造吧，比如先取一条直线经过点(a,b)，剩下的n-1条随便选。第二个条件，这n条直线中恰有k条是阳光的，题目是求k，那上面构造好后我数一下有几条不就得到了k？现在我的头脑还是比较混乱的，我还没搞明白题目到底想让我做什么。a和b不是一个点，它是很多个点，就是满足条件的构造要把这很多个点都覆盖了，只要有一条直线经过就行，关于覆盖这个词ai输出的内容中就已经提到了。
 
 你不是有了操作后得到k的方法吗，那就代入n，a，b等的具体数值，算出k的值，注意不止一个，不要漏掉了。有漏掉好判定，给出答案没有的k值，验证满足条件就可以了，但正确答案给出k的所有取值，怎么才能自证没有漏掉呢？初步想到一种思路，就是给定n，遍历所有可能的a和b，一一验证，因为n，a，b都是正整数，所以是可以验证的。这段话说的很乱。
 
