--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,60 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 7.19：
+最新 7.21
 
+李白 - 梦游天姥吟留别
+
+海客谈瀛洲，烟涛微茫信难求；<br>
+越人语天姥，云霞明灭或可睹。<br>
+天姥连天向天横，势拔五岳掩赤城。<br>
+天台四万八千丈，对此欲倒东南倾。(四万 一作：一万)<br>
+
+我欲因之梦吴越，一夜飞度镜湖月。<br>
+湖月照我影，送我至剡溪。<br>
+谢公宿处今尚在，渌水荡漾清猿啼。<br>
+脚著谢公屐，身登青云梯。<br>
+半壁见海日，空中闻天鸡。<br>
+千岩万转路不定，迷花倚石忽已暝。<br>
+熊咆龙吟殷岩泉，栗深林兮惊层巅。<br>
+云青青兮欲雨，水澹澹兮生烟。<br>
+列缺霹雳，丘峦崩摧。<br>
+洞天石扉，訇然中开。<br>
+青冥浩荡不见底，日月照耀金银台。<br>
+霓为衣兮风为马，云之君兮纷纷而来下。<br>
+虎鼓瑟兮鸾回车，仙之人兮列如麻。<br>
+忽魂悸以魄动，恍惊起而长嗟。<br>
+惟觉时之枕席，失向来之烟霞。<br>
+
+世间行乐亦如此，古来万事东流水。<br>
+别君去兮何时还？且放白鹿青崖间，须行即骑访名山。<br>
+安能摧眉折腰事权贵，使我不得开心颜？
+
+------
+叶俊华 - 往事  伴奏<br>
+https://5sing.kugou.com/bz/2235917.html
+
+作词：陈旭东  作曲：黄水泉
+
+是谁转动了记忆的魔方<br>
+让往事走出来晒晒太阳<br>
+过去的早插上风的翅膀<br>
+留住的就让她在怀里疗伤<br>
+往事是品不尽的七色酒<br>
+往事是喝不完的百草汤<br>
+往事是笑中的辛酸泪<br>
+往事是苦里的话梅糖<br>
+
+是谁转动了记忆的魔方<br>
+让往事走出来看看月亮<br>
+模糊的早淋上雨的油漆<br>
+清晰的就让她在梦里飞扬<br>
+往事是看不够的万花筒<br>
+往事是冲不破的防火墙<br>
+往事是命运的交响曲<br>
+往事是人生的纪念章<br>
+哎 嘿<br>
+
+-------
 王心凌 - 失恋歌迷党
 
 作词: 陈静楠
