--- a/text/看书.md
+++ b/text/看书.md
@@ -7,15 +7,19 @@
 
 上面说平行就是y+kx形式中的k是固定的，但这么说总显得太单薄了点，从直观上来看平行应该指的是两条直线上点的距离处处相等。那不平行为什么就做不到处处相等呢？从形式上就可以保证处处相等的，比如两条平行直线y=kx+b1，y=kx+b2，当x取相同的值时，y的差值总是b1-b2。如果k不相等，那么差值就是(k1-k2)x+b1-b2，这个差值会随着x的改变而改变。这样的说明还只是举了一个特例，理由不够充分，前面说的就是用一条平行y轴的直线去割两条平行线，得到的距离处处相等，完整的应该是任意平行的一组直线去割两条平行线，得到的线段都是处处相等的。但这应该是平行的基本定义吧，怎么变得好像是一个需要证明的复杂定理一样。上面说的好像是平行四边形，应该可以从同位角、全等之类的一步一步构造出来证明。另外还有一点是我在考虑的，坐标几何和纯几何的对应关系在数学专业中有严格的证明吗？就是如何证明不可能出现反例导致两种方法对同一个命题的结论判定是不一致的。
 
+问了下ai，看不懂，关键字：希尔伯特公理、模型论、连续公理、欧氏几何是范畴性的：所有欧氏几何的模型（满足希尔伯特公理的任意结构）彼此同构、则存在一个双射使得：保持全等、平行、介于、距离比、角度等全部几何关系、利用 合同公理 + 完备性公理 逐一确定 ${M}_1$ 中 每个点的像（稠密性 + 极限保证无遗漏）。验证所有几何操作（旋转、反射、相似变换）与 ${R}^2$ 中的代数运算一一对应、  ${M}_1$ 就是（且是唯一的）欧氏几何的模型，所有几何真理在两者中同步成立。这叫 模型间的 真值一致性（soundness & completeness）、欧氏几何（仅含一阶逻辑）是可判定的：存在算法，对任意几何命题 (P)，判断“(P) 是否在 ${R}^2$成立”。（依赖 实闭域的模型完备性
+
 给定n，>=3（如果n取2会产生什么不良后果吗？）,求k，使得存在，n条，满足两个条件，a和b满足a+b<=n+1，的点。第一个条件，当给定了一个n后，在<=n内无论a和b怎么取，都能构造出n条直线使得有一条经过点(a,b)，只有这个条件应该是随便构造吧，比如先取一条直线经过点(a,b)，剩下的n-1条随便选。第二个条件，这n条直线中恰有k条是阳光的，题目是求k，那上面构造好后我数一下有几条不就得到了k？现在我的头脑还是比较混乱的，我还没搞明白题目到底想让我做什么。a和b不是一个点，它是很多个点，就是满足条件的构造要把这很多个点都覆盖了，只要有一条直线经过就行，关于覆盖这个词ai输出的内容中就已经提到了。
 
-你不是有了操作后得到k的方法吗，那就代入n，a，b等的具体数值，算出k的值，注意不止一个，不要漏掉了。有漏掉好判定，给出答案没有的k值，验证满足条件就可以了，但正确答案给出k的所有取值，怎么才能自证没有漏掉呢？初步想到一种思路，就是给定n，遍历所有可能的a和b，一一验证，因为n，a，b都是正整数，所以是可以验证的。这段话说的很乱。
+你不是有了操作后得到k的方法吗，那就代入n，a，b等的具体数值，算出k的值，注意不止一个，不要漏掉了。有漏掉好判定，给出答案没有的k值，验证满足条件就可以了，但正确答案给出k的所有取值，怎么才能自证没有漏掉呢？初步想到一种思路，就是给定n，遍历所有可能的a和b，一一验证，因为n，a，b都是正整数，所以是可以验证的。这段话说的很乱。遍历ab是什么意思？这里ab是构造需要的条件，遍历的应该是构造方式，至于构造方式应该怎么遍历我没什么思路，是先遍历每个点然后放上直线，还是先遍历每条直线再找点穿过？或者很有可能这两种遍历都和这道题的答案无关。关于漏掉的问题，一般是这样自证，初始状态k的取值在某个集合内，假设第x个状态也在取值范围内，输入第x状态的相关数值通过合法操作得到x+1状态，此时k的取值仍然在某个集合内，那么k就不会跳出这个集合，所以k是无遗漏的。
 
-感觉对题意的理解还是一知半解的，先找找题目中一些隐含的条件，a和b是正整数，所以满足a+b<=n+1的ab取值是有限的，如果不限制整数会怎么样？那ab就有无数个点，n条直线肯定是覆盖不了的。我现在有点明白题目的意思了，好像要求的k是一个关于n的表达式，n不取1、2可能是这时算出来的k值不能用n>=3算出来的表达式来表示。既然k是关于n的一个表达式，那么题目中又说求所有非负整数k，这样的说法就有点怪怪的，这句话的意思难道是k的表达式还不止一种？你的理解问题很大，n不是构造本身，n只是限定了构造直线的条数，满足条件1的n条直线的构造方式有无数种，在这无数种方式中再找出对应的k，只要有一种方式数出来是k，那么这个k就是满足给定n的解。不是无数种，需要覆盖满足a+b<=n+1的所有点(a,b),虽然这样的构造不是很难，但也不是随随便便就能覆盖的，这里需要讨论点(a,b)的个数和n的关系，好像是一个在直角三角形内的所有点吧？直角边在x轴y轴上。
+感觉对题意的理解还是一知半解的，先找找题目中一些隐含的条件，a和b是正整数，所以满足a+b<=n+1的ab取值是有限的，如果不限制整数会怎么样？那ab就有无数个点，n条直线肯定是覆盖不了的。我现在有点明白题目的意思了，好像要求的k是一个关于n的表达式，n不取1、2可能是这时算出来的k值不能用n>=3算出来的表达式来表示。既然k是关于n的一个表达式，那么题目中又说求所有非负整数k，这样的说法就有点怪怪的，这句话的意思难道是k的表达式还不止一种？你的理解问题很大，n不是构造本身，n只是限定了构造直线的条数，满足条件1的n条直线的构造方式有无数种，在这无数种方式中再找出对应的k，只要有一种方式数出来是k，那么这个k就是满足给定n的解。不是无数种，需要覆盖满足a+b<=n+1的所有点(a,b),虽然这样的构造不是很难，但也不是随随便便就能覆盖的，这里需要讨论点(a,b)的个数和n的关系，好像是一个在直角三角形内的所有点吧？直角边在x轴y轴上。所谓阳光直线就是不和三角形三条边中的任何一条平行。
 
 我感觉我对题目还是没有理解清楚，是题目太绕了，还是我的理解能力太差了？很多题目我都需要看答案才能明白出题人想表达什么意思，这次想先不看答案弄明白题目的意思，以后有空再把我上面写的思维混乱的文字逐字逐句地斟酌一番，把所有混淆的概念都区分出来。看数学书的老问题又来了，为什么一定要和出题人的理解相同呢？就不能按自己的认知来理解？毕竟我现在看数学又不是为了考试，也不需要数学圈的认同，和ai圈也没什么关系，哲学圈的人也不看数学。倒是有可能会进入民科圈。
 
 因为你们的脑容量是我的很多倍，所以批判我或者夸赞我都没什么意思，我这里只是想展示智商不高的人想体验做数学题的思维过程，又不想花时间学数学，那就只能借助ai玩玩高中数学竞赛题了，毕竟以后就算ai做imo满分了，也要从作用和体验两方面体现出来。
+
+关于n条直线的构造，首先我想到的是竖着n条、横着n条、斜着n条，还有吗？接下来没什么想法了。ai是这样构造的，以3条为例，它是横着一条，竖着一条，斜着一条。阳光指不平行，平行不阳光，所以无论横竖斜都是不阳光的，k是指阳光的，所以到现在为止k还是0。
 
 ------
 晴雯在旁哭着，方欲说话，只见林黛玉进来，便出去了。林黛玉笑道：“大节下怎么了？好好的哭起来。难道是为争粽子吃争恼了不成？”宝玉和袭人嗤的一笑。林黛玉道：“二哥哥不告诉我，我问你就知道了。”一面说，一面靠着袭人的肩膀道：“好嫂子，你告诉我。必定是你们两个拌了嘴了。告诉妹妹，替你们和劝和劝。”袭人推他道：“林姑娘你闹什么？我们一个丫头家，姑娘只是混说。”黛玉笑道：“你说你是个丫头，我只拿你当嫂子待。”宝玉道：“你何苦来！替他招骂名儿。饶这么着，还有人说闲话，还搁的住你来说他。”袭人笑道：“林姑娘，你不知道我的心事，除非这一口气不来死了倒也罢了。”林黛玉笑道：“你死了，别人不知怎么样，我先就哭死了。”宝玉笑道：“你死了，我作和尚去。”袭人笑道：“你老实些罢，何苦来还说这些话。”林黛玉将两个指头一伸，抿嘴笑道：“作了两个和尚了。我从今以后都记着你作和尚的遭数儿。”宝玉听了，知道是他点前儿的话，自己一笑也就罢了。
@@ -183,6 +187,26 @@ https://zhuanlan.zhihu.com/p/607390704
 　　可怜今夕月，向何处，去悠悠？是别有人间，那边才见，光影东头？
 
 　　是天外，在汗漫，但长风浩浩送中秋？飞镜无根谁系，妲娥不嫁谁留？
+
+-------
+豫章故郡，洪都新府。星分翼轸，地接衡庐。襟三江而带五湖，控蛮荆而引瓯越。物华天宝，龙光射牛斗之墟；人杰地灵，徐孺下陈蕃之榻。雄州雾列，俊采星驰。台隍枕夷夏之交，宾主尽东南之美。都督阎公之雅望，棨戟遥临；宇文新州之懿范，襜帷暂驻。十旬休假，胜友如云；千里逢迎，高朋满座。腾蛟起凤，孟学士之词宗；紫电青霜，王将军之武库。家君作宰，路出名区；童子何知，躬逢胜饯。
+
+　　时维九月，序属三秋。潦水尽而寒潭清，烟光凝而暮山紫。俨骖騑于上路，访风景于崇阿。临帝子之长洲，得天人之旧馆。层峦耸翠，上出重霄；飞阁流丹，下临无地。鹤汀凫渚，穷岛屿之萦回；桂殿兰宫，即冈峦之体势。
+
+　　披绣闼，俯雕甍，山原旷其盈视，川泽纡其骇瞩。闾阎扑地，钟鸣鼎食之家；舸舰弥津，青雀黄龙之舳。云销雨霁，彩彻区明。落霞与孤鹜齐飞，秋水共长天一色。渔舟唱晚，响穷彭蠡之滨，雁阵惊寒，声断衡阳之浦。
+
+　　遥襟甫畅，逸兴遄飞。爽籁发而清风生，纤歌凝而白云遏。睢园绿竹，气凌彭泽之樽；邺水朱华，光照临川之笔。四美具，二难并。穷睇眄于中天，极娱游于暇日。天高地迥，觉宇宙之无穷；兴尽悲来，识盈虚之有数。望长安于日下，目吴会于云间。地势极而南溟深，天柱高而北辰远。关山难越，谁悲失路之人；萍水相逢，尽是他乡之客。怀帝阍而不见，奉宣室以何年？
+
+　　嗟乎！时运不齐，命途多舛。冯唐易老，李广难封。屈贾谊于长沙，非无圣主；窜梁鸿于海曲，岂乏明时？所赖君子见机，达人知命。老当益壮，宁移白首之心？穷且益坚，不坠青云之志。酌贪泉而觉爽，处涸辙以犹欢。北海虽赊，扶摇可接；东隅已逝，桑榆非晚。孟尝高洁，空余报国之情；阮籍猖狂，岂效穷途之哭！
+
+　　勃，三尺微命，一介书生。无路请缨，等终军之弱冠；有怀投笔，慕宗悫之长风。舍簪笏于百龄，奉晨昏于万里。非谢家之宝树，接孟氏之芳邻。他日趋庭，叨陪鲤对；今兹捧袂，喜托龙门。杨意不逢，抚凌云而自惜；钟期既遇，奏流水以何惭？
+
+　　呜呼！胜地不常，盛筵难再；兰亭已矣，梓泽丘墟。临别赠言，幸承恩于伟饯；登高作赋，是所望于群公。敢竭鄙怀，恭疏短引；一言均赋，四韵俱成。请洒潘江，各倾陆海云尔：
+
+　　滕王高阁临江渚，佩玉鸣鸾罢歌舞。 <br>
+　　画栋朝飞南浦云，珠帘暮卷西山雨。 <br>
+　　闲云潭影日悠悠，物换星移几度秋。 <br>
+　　阁中帝子今何在？槛外长江空自流。
 
 -------
 许敬宗家中有一座小池塘，我为此作赋赐给他。
