--- a/text/看书.md
+++ b/text/看书.md
@@ -19,7 +19,7 @@
 
 因为你们的脑容量是我的很多倍，所以批判我或者夸赞我都没什么意思，我这里只是想展示智商不高的人想体验做数学题的思维过程，又不想花时间学数学，那就只能借助ai玩玩高中数学竞赛题了，毕竟以后就算ai做imo满分了，也要从作用和体验两方面体现出来。
 
-关于n条直线的构造，首先我想到的是竖着n条、横着n条、斜着n条，还有吗？接下来没什么想法了。ai是这样构造的，以3条为例，它是横着一条，竖着一条，斜着一条。阳光指不平行，平行不阳光，所以无论横竖斜都是不阳光的，k是指阳光的，所以到现在为止k还是0。
+关于n条直线的构造，首先我想到的是竖着n条、横着n条、斜着n条，还有吗？接下来没什么想法了。ai是这样构造的，以3条为例，它是横着一条，竖着一条，斜着一条。阳光指不平行，平行不阳光，所以无论横竖斜都是不阳光的，k是指阳光的，所以到现在为止k还是0。怎么会是0呢？以n=3为例，把图画出来，a+b<=4有6个点，比如(1,4)和(2,1)、(1,1)和(2,2)、(1,1)和(2,2)、(1,2)和(3,1)，这样就构造出了满足条件3条直线，且都是阳光的。
 
 ------
 晴雯在旁哭着，方欲说话，只见林黛玉进来，便出去了。林黛玉笑道：“大节下怎么了？好好的哭起来。难道是为争粽子吃争恼了不成？”宝玉和袭人嗤的一笑。林黛玉道：“二哥哥不告诉我，我问你就知道了。”一面说，一面靠着袭人的肩膀道：“好嫂子，你告诉我。必定是你们两个拌了嘴了。告诉妹妹，替你们和劝和劝。”袭人推他道：“林姑娘你闹什么？我们一个丫头家，姑娘只是混说。”黛玉笑道：“你说你是个丫头，我只拿你当嫂子待。”宝玉道：“你何苦来！替他招骂名儿。饶这么着，还有人说闲话，还搁的住你来说他。”袭人笑道：“林姑娘，你不知道我的心事，除非这一口气不来死了倒也罢了。”林黛玉笑道：“你死了，别人不知怎么样，我先就哭死了。”宝玉笑道：“你死了，我作和尚去。”袭人笑道：“你老实些罢，何苦来还说这些话。”林黛玉将两个指头一伸，抿嘴笑道：“作了两个和尚了。我从今以后都记着你作和尚的遭数儿。”宝玉听了，知道是他点前儿的话，自己一笑也就罢了。
