--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,51 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 7.21
+最新 7.22
 
+[4K/双语字幕] [荷东 第02集-05] Joe Lockwood - Hey You <br>
+https://www.bilibili.com/video/BV1bsTuzkE2U/
+
+荷东：东方好莱坞明星舞会，舞动青春的回忆杀~荷东（第二集） （Hollywood East Star Trax 2） <br>
+https://www.bilibili.com/video/BV1VBosYVEww/
+
+23分：Joe Lockwood - Hey You
+
+She has a heart of gold<br>
+The way to paradise is cold<br>
+I know I know<br>
+That this world is a show<br>
+Love you more than words can say<br>
+There is a will - there is a way<br>
+I know I know<br>
+hey hey hey ... <br>
+
+I want you hey you<br>
+Feel brand-new<br>
+Oh I'll break the golden rules<br>
+Time is on my side<br>
+I want you hey you<br>
+Take a chance on me<br>
+Baby put your love on me<br>
+I want you tonight
+
+I want you hey you<br>
+Little boo-ba-loo<br>
+You shot a hole right in my soul<br>
+Hey girl hey girl take this chance for love<br>
+I want you hey you<br>
+Little boo-ba-loo<br>
+You want me and I want you<br>
+Hey girl hey girl you're the one I'm dreamin' of
+
+I'm tired of bein' alone<br>
+Oh girl it's easier said than done<br>
+I know I know<br>
+That this world is a show<br>
+Oh you wasted days and nights<br>
+Give me the chance for paradise<br>
+I know I know<br>
+
+------
 李白 - 梦游天姥吟留别
 
 海客谈瀛洲，烟涛微茫信难求；<br>
