--- a/text/看书.md
+++ b/text/看书.md
@@ -7,11 +7,13 @@
 
 上面说平行就是y+kx形式中的k是固定的，但这么说总显得太单薄了点，从直观上来看平行应该指的是两条直线上点的距离处处相等。那不平行为什么就做不到处处相等呢？从形式上就可以保证处处相等的，比如两条平行直线y=kx+b1，y=kx+b2，当x取相同的值时，y的差值总是b1-b2。如果k不相等，那么差值就是(k1-k2)x+b1-b2，这个差值会随着x的改变而改变。这样的说明还只是举了一个特例，理由不够充分，前面说的就是用一条平行y轴的直线去割两条平行线，得到的距离处处相等，完整的应该是任意平行的一组直线去割两条平行线，得到的线段都是处处相等的。但这应该是平行的基本定义吧，怎么变得好像是一个需要证明的复杂定理一样。上面说的好像是平行四边形，应该可以从同位角、全等之类的一步一步构造出来证明。另外还有一点是我在考虑的，坐标几何和纯几何的对应关系在数学专业中有严格的证明吗？就是如何证明不可能出现反例导致两种方法对同一个命题的结论判定是不一致的。
 
-问了下ai，看不懂，关键字：希尔伯特公理、模型论、连续公理、欧氏几何是范畴性的：所有欧氏几何的模型（满足希尔伯特公理的任意结构）彼此同构、则存在一个双射使得：保持全等、平行、介于、距离比、角度等全部几何关系、利用 合同公理 + 完备性公理 逐一确定 ${M}_1$ 中 每个点的像（稠密性 + 极限保证无遗漏）。验证所有几何操作（旋转、反射、相似变换）与 ${R}^2$ 中的代数运算一一对应、  ${M}_1$ 就是（且是唯一的）欧氏几何的模型，所有几何真理在两者中同步成立。这叫 模型间的 真值一致性（soundness & completeness）、欧氏几何（仅含一阶逻辑）是可判定的：存在算法，对任意几何命题 (P)，判断“(P) 是否在 ${R}^2$成立”。（依赖 实闭域的模型完备性
+问了下ai，看不懂，关键字：希尔伯特公理、模型论、连续公理、欧氏几何是范畴性的：所有欧氏几何的模型（满足希尔伯特公理的任意结构）彼此同构、则存在一个双射使得：保持全等、平行、介于、距离比、角度等全部几何关系、利用 合同公理 + 完备性公理 逐一确定M1中 每个点的像（稠密性 + 极限保证无遗漏）。验证所有几何操作（旋转、反射、相似变换）与二维实数空间中的代数运算一一对应、 M1就是（且是唯一的）欧氏几何的模型，所有几何真理在两者中同步成立。这叫 模型间的 真值一致性（soundness & completeness）、欧氏几何（仅含一阶逻辑）是可判定的：存在算法，对任意几何命题 (P)，判断“(P) 是否在二维实数空间成立”。（依赖 实闭域的模型完备性
 
 给定n，>=3（如果n取2会产生什么不良后果吗？）,求k，使得存在，n条，满足两个条件，a和b满足a+b<=n+1，的点。第一个条件，当给定了一个n后，在<=n内无论a和b怎么取，都能构造出n条直线使得有一条经过点(a,b)，只有这个条件应该是随便构造吧，比如先取一条直线经过点(a,b)，剩下的n-1条随便选。第二个条件，这n条直线中恰有k条是阳光的，题目是求k，那上面构造好后我数一下有几条不就得到了k？现在我的头脑还是比较混乱的，我还没搞明白题目到底想让我做什么。a和b不是一个点，它是很多个点，就是满足条件的构造要把这很多个点都覆盖了，只要有一条直线经过就行，关于覆盖这个词ai输出的内容中就已经提到了。
 
 你不是有了操作后得到k的方法吗，那就代入n，a，b等的具体数值，算出k的值，注意不止一个，不要漏掉了。有漏掉好判定，给出答案没有的k值，验证满足条件就可以了，但正确答案给出k的所有取值，怎么才能自证没有漏掉呢？初步想到一种思路，就是给定n，遍历所有可能的a和b，一一验证，因为n，a，b都是正整数，所以是可以验证的。这段话说的很乱。遍历ab是什么意思？这里ab是构造需要的条件，遍历的应该是构造方式，至于构造方式应该怎么遍历我没什么思路，是先遍历每个点然后放上直线，还是先遍历每条直线再找点穿过？或者很有可能这两种遍历都和这道题的答案无关。关于漏掉的问题，一般是这样自证，初始状态k的取值在某个集合内，假设第x个状态也在取值范围内，输入第x状态的相关数值通过合法操作得到x+1状态，此时k的取值仍然在某个集合内，那么k就不会跳出这个集合，所以k是无遗漏的。
+
+上面这段话可以看出我的思维固化了，我一直想的是n条直线，每条直线可以平移到任意位置，旋转360度得到无数种构造方式，但这无数种位置绝大多数是不覆盖的，需要从中找出能覆盖的n条直线，只要把全部点都覆盖了，一条直线覆盖的多一点，剩几条远在千里之外也没关系。然后再从满足条件的n条直线的构造中计算出k值。事实上是很多种构造对应一个k值，但题目只要求一个k值有一种构造就是解，而k值需要考虑的是0、1、2、n-x、n-2、n-1、n这几种情况就行了，根本就不需要考虑所有的构造。写到这里虽然我还不知道答案的具体细节，但基本把题目的意思搞明白了。之前关于漏掉的判定都是基于对题目错误的理解，现在有了新的理解，漏掉的问题就要重新考虑了，不能说前面思考过了接下来就可以逃避了，因为之前的理解和现在的理解可能是两种不同的场景。
 
 感觉对题意的理解还是一知半解的，先找找题目中一些隐含的条件，a和b是正整数，所以满足a+b<=n+1的ab取值是有限的，如果不限制整数会怎么样？那ab就有无数个点，n条直线肯定是覆盖不了的。我现在有点明白题目的意思了，好像要求的k是一个关于n的表达式，n不取1、2可能是这时算出来的k值不能用n>=3算出来的表达式来表示。既然k是关于n的一个表达式，那么题目中又说求所有非负整数k，这样的说法就有点怪怪的，这句话的意思难道是k的表达式还不止一种？你的理解问题很大，n不是构造本身，n只是限定了构造直线的条数，满足条件1的n条直线的构造方式有无数种，在这无数种方式中再找出对应的k，只要有一种方式数出来是k，那么这个k就是满足给定n的解。不是无数种，需要覆盖满足a+b<=n+1的所有点(a,b),虽然这样的构造不是很难，但也不是随随便便就能覆盖的，这里需要讨论点(a,b)的个数和n的关系，好像是一个在直角三角形内的所有点吧？直角边在x轴y轴上。所谓阳光直线就是不和三角形三条边中的任何一条平行。
 
@@ -19,7 +21,11 @@
 
 因为你们的脑容量是我的很多倍，所以批判我或者夸赞我都没什么意思，我这里只是想展示智商不高的人想体验做数学题的思维过程，又不想花时间学数学，那就只能借助ai玩玩高中数学竞赛题了，毕竟以后就算ai做imo满分了，也要从作用和体验两方面体现出来。
 
-关于n条直线的构造，首先我想到的是竖着n条、横着n条、斜着n条，还有吗？接下来没什么想法了。ai是这样构造的，以3条为例，它是横着一条，竖着一条，斜着一条。阳光指不平行，平行不阳光，所以无论横竖斜都是不阳光的，k是指阳光的，所以到现在为止k还是0。怎么会是0呢？以n=3为例，把图画出来，a+b<=4有6个点，比如(1,3)和(2,1)、(1,1)和(2,2)、(1,2)和(3,1)，这样就构造出了满足条件的3条直线，且都是阳光的。
+关于n条直线的构造，首先我想到的是竖着n条、横着n条、斜着n条，还有吗？接下来没什么想法了。ai是这样构造的，以3条为例，它是横着一条，竖着一条，斜着一条。阳光指不平行，平行不阳光，所以无论横竖斜都是不阳光的，k是指阳光的，所以到现在为止k还是0。怎么会是0呢？以n=3为例，把图画出来，a+b<=4有6个点，比如(1,3)和(2,1)、(1,1)和(2,2)、(1,2)和(3,1)，这样就构造出了满足条件的3条直线，且都是阳光的。n条直线覆盖n*(n+1)/2个点，如果n=3，平均每条直线要覆盖2个点，如果n=4，2.5个点，n=5，3个点。
+
+出现了点意外，不小心看了一眼答案。我发现把做数学题的推理过程写成一篇侦探小说真的挺有意思的，剧透了就不好玩了。
+
+k的可能取值是0，1，2...n，这个我之前没想过。k指的是n中有几条阳光的，所以k不可能是n+1，假如k真的取到了n+1会发生什么？还有我之前认为k是关于n的表达式这个思路也是错的，k还可以是由n约束的一个集合。有个问题，n条直线，n-1条把所有点都覆盖了，还剩一条没经过任何一个点，这样是算n还是n-1？要求k，只能算n，如果n条不覆盖，需要n+1条才覆盖，那么k的条件1就不满足，如果n-1条满足了，剩下的这条不管在哪里都是满足条件的，但最后算k的时候这条直线阳不阳光会决定k值大小。
 
 ------
 晴雯在旁哭着，方欲说话，只见林黛玉进来，便出去了。林黛玉笑道：“大节下怎么了？好好的哭起来。难道是为争粽子吃争恼了不成？”宝玉和袭人嗤的一笑。林黛玉道：“二哥哥不告诉我，我问你就知道了。”一面说，一面靠着袭人的肩膀道：“好嫂子，你告诉我。必定是你们两个拌了嘴了。告诉妹妹，替你们和劝和劝。”袭人推他道：“林姑娘你闹什么？我们一个丫头家，姑娘只是混说。”黛玉笑道：“你说你是个丫头，我只拿你当嫂子待。”宝玉道：“你何苦来！替他招骂名儿。饶这么着，还有人说闲话，还搁的住你来说他。”袭人笑道：“林姑娘，你不知道我的心事，除非这一口气不来死了倒也罢了。”林黛玉笑道：“你死了，别人不知怎么样，我先就哭死了。”宝玉笑道：“你死了，我作和尚去。”袭人笑道：“你老实些罢，何苦来还说这些话。”林黛玉将两个指头一伸，抿嘴笑道：“作了两个和尚了。我从今以后都记着你作和尚的遭数儿。”宝玉听了，知道是他点前儿的话，自己一笑也就罢了。
